Bug#25721   "Concurrent ALTER/CREATE SERVER can lead to deadlock"   Deadlock caused by inconsistant use of mutexes in sql_server.cc   One mutex has been removed to resolve deadlock.   Many functions were made private which should not be exported.   Unused variables and function removed.